--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server": "node server.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.95.3",
     "lucide-react": "^0.564.0",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
